@startuml Chirp Domain Model

!define TABLE class
!define PRIMARY_KEY <b><u>
!define FOREIGN_KEY <i>

' ASP.NET Identity class
abstract class "IdentityUser<int>" {
  PRIMARY_KEY Id : int
  UserName : string
  Email : string
  PasswordHash : string
  SecurityStamp : string
  PhoneNumber : string
  ...
}

' Author entity
class Author {
  Id : int (inherited)
  Name : string
  Email : string (override)
  UserName : string (inherited)
  --
  Cheeps : ICollection<Cheep>
}

' Cheep entity
class Cheep {
  PRIMARY_KEY CheepId : int
  Text : string <<Required, MaxLength(160)>>
  TimeStamp : DateTime
  FOREIGN_KEY AuthorId : int
  --
  Author : Author
}

' Follow entity (join table)
class Follow {
  PRIMARY_KEY FOREIGN_KEY FollowerId : int
  PRIMARY_KEY FOREIGN_KEY FollowedId : int
}

' Like entity (join table)
class Like {
  PRIMARY_KEY FOREIGN_KEY LikerId : int
  PRIMARY_KEY FOREIGN_KEY LikedCheepId : int
}

' Relationships
"IdentityUser<int>" <|-- Author : inherits

Author "1" -- "0..N" Cheep : authors >

Author "0..N" -- "0..N" Follow : follower >
Author "0..N" -- "0..N" Follow : followed <

Author "0..N" -- "0..N" Like : liker >
Cheep "0..N" -- "0..N" Like : liked cheep <

' Notes
note right of "IdentityUser<int>"
    Properties for IdentityUser
    can be found at Microsoft 
    AspNetCore documentation
end note


note right of Author
  Extends ASP.NET Identity
  Email property overridden
  to set UserName automatically
end note

note right of Cheep
  Cascade delete when
  Author is deleted
end note

note right of Follow
  Composite key:
  (FollowerId, FollowedId)
  Self-referencing relationship
end note

note right of Like
  Composite key:
  (LikerId, LikedCheepId)
end note

@enduml
